arc-script/arc-script-test/insta/src/snapshots/rust@if_let.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/if_let.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn x_3(y_0: i32) -> i32 {
    y_0 + 2i32
}
pub fn test() -> i32 {
    let x_0: i32 = 3i32;
    let y_0: i32 = 5i32;
    let x_1: ((i32, i32), i32) = ((3i32, x_0), 1i32);
    let x_2: (i32, i32) = x_1.0;
    if x_2.0 == 1i32 {
        let z_0: i32 = x_2.1;
        if x_1.1 == 1i32 {
            z_0 + y_0
        } else {
            x_3(y_0)
        }
    } else {
        x_3(y_0)
    }
}


