arc-script/arc-script-test/insta/src/snapshots/rust@lambda.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/lambda.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn x_0(i_0: i32) -> i32 {
    i_0 + 1i32
}
pub fn test() -> i32 {
    let increment_0: fn(i32) -> i32 = x_0;
    let foo_0: i32 = 1i32;
    increment_0(foo_0)
}


