arc-script/arc-script-test/insta/src/snapshots/rust@literals.arc.snap
---
source: arc-script-test-insta/src/lib.rs
expression: s
input_file: arc-script-test-insta/src/expect-pass/literals.arc
---
use arcon::prelude::*;
pub fn test() -> i32 {
    let pos_i8_0: i8 = 127i8;
    let neg_i8_0: i8 = -128i8;
    let pos_i16_0: i16 = 32767i16;
    let neg_i16_0: i16 = -32768i16;
    let pos_i32_0: i32 = 2147483647i32;
    let neg_i32_0: i32 = -2147483648i32;
    let pos_i64_0: i64 = 9223372036854775807i64;
    let neg_i64_0: i64 = -9223372036854775808i64;
    let pos_u8_0: u8 = 255u8;
    let pos_u16_0: u16 = 65535u16;
    let pos_u32_0: u32 = 4294967295u32;
    let pos_u64_0: u64 = 18446744073709551615u64;
    let pos_bf16_0: bf16 = half::bf16::from_f32(338953140000000000000000000000000000000f32);
    let neg_bf16_0: bf16 = half::bf16::from_f32(-117636680000000000000000000000000000000f32);
    let pos_f16_0: f16 = half::f16::from_f32(65504f32);
    let neg_f16_0: f16 = half::f16::from_f32(-65504f32);
    let pos_f32_0: f32 = 340282350000000000000000000000000000000f32;
    let neg_f32_0: f32 = -340282350000000000000000000000000000000f32;
    let pos_f64_0 : f64 = 179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
    let neg_f64_0 : f64 = - 179769313486231570000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000f64 ;
    let true_bool_0: bool = true;
    let false_bool_0: bool = false;
    4711i32
}


