arc-script/arc-script-test/insta/src/snapshots/rust@nested-if.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/nested-if.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn test() -> i32 {
    let a_i32_0: i32 = 65i32;
    let b_i32_0: i32 = 66i32;
    let c_i32_0: i32 = 67i32;
    let true_bool_0: bool = true;
    let false_bool_0: bool = false;
    if true_bool_0 {
        a_i32_0
    } else {
        if false_bool_0 {
            b_i32_0
        } else {
            c_i32_0
        }
    }
}


