arc-script/arc-script-test/insta/src/snapshots/rust@option.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/option.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
#[arcorn::rewrite]
pub enum Option {
    Option_Some(i32),
    Option_None(()),
}
pub fn x_2() -> () {
    ()
}
pub fn main() -> () {
    let x_0: Option = Option_Some(3i32);
    if arcorn::is!(x_0, Option_Some) {
        let y_0: i32 = arcorn::unwrap!(x_0, Option_Some);
        ()
    } else {
        x_2()
    }
}


