arc-script/arc-script-test/insta/src/snapshots/rust@path.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/path.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn main() -> () {
    let x_0: i32 = 1i32;
    let y_0: i32 = x_0;
    ()
}


