arc-script/arc-script-test/insta/src/snapshots/rust@pattern.arc.snap
---
source: arc-script-test-insta/src/lib.rs
expression: s
input_file: arc-script-test-insta/src/expect-pass/pattern.arc
---
use arcon::prelude::*;
pub fn main() -> () {
    let x_0: ((i32, i32), (i32, i32)) = ((1i32, 2i32), (3i32, 4i32));
    let x_1: (i32, i32) = x_0.0;
    let a_0: i32 = x_1.0;
    let b_0: i32 = x_1.1;
    let x_2: (i32, i32) = x_0.1;
    let c_0: i32 = x_2.0;
    let d_0: i32 = x_2.1;
    ()
}


