arc-script/arc-script-test/insta/src/snapshots/rust@structs.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-pass/structs.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
pub fn test() -> () {
    let x_0: Struct1aStruct1ci321bi32End3xyzi321dStruct1ci321bi32EndEnd =
        Struct1aStruct1ci321bi32End3xyzi321dStruct1ci321bi32EndEnd {
            a: Struct1ci321bi32End { c: 1i32, b: 5i32 },
            xyz: 2i32,
            d: Struct1ci321bi32End { b: 4i32, c: 2i32 },
        };
    ()
}
#[arcorn::rewrite]
#[derive(Copy)]
pub struct Struct1ci321bi32End {
    c: i32,
    b: i32,
}
#[arcorn::rewrite]
#[derive(Copy)]
pub struct Struct1aStruct1ci321bi32End3xyzi321dStruct1ci321bi32EndEnd {
    a: Struct1ci321bi32End,
    xyz: i32,
    d: Struct1ci321bi32End,
}


