arc-script/arc-script-test/insta/src/snapshots/rust@task-identity-untagged.arc.snap
---
source: arc-script-test/insta/src/lib.rs
expression: s
input_file: arc-script-test/insta/src/expect-mlir-fail-todo/task-identity-untagged.arc
---
use arc_script::arcorn;
use arcon::prelude::*;
#[derive(ArconState)]
pub struct TaskIdentity {
    #[ephemeral]
    timestamp: Option<u64>,
}
impl Operator for TaskIdentity {
    type IN = Struct5valuei32End;
    type OUT = Struct5valuei32End;
    type TimerState = ArconNever;
    type OperatorState = Self;
    fn handle_element(
        &mut self,
        elem: ArconElement<Self::IN>,
        mut ctx: OperatorContext<Self, impl Backend, impl ComponentDefinition>,
    ) -> OperatorResult<()> {
        self.timestamp = elem.timestamp;
        let event_0 = elem.data.value;
        ctx.output(ArconElement {
            data: Self::OUT { value: event_0 },
            timestamp: self.timestamp,
        });
        Ok(())
    }
    arcon::ignore_timeout!();
    arcon::ignore_persist!();
}
fn Identity() -> OperatorBuilder<TaskIdentity> {
    OperatorBuilder {
        constructor: Arc::new(move |b| TaskIdentity { timestamp: None }),
        conf: Default::default(),
    }
}
pub fn main(input_0: Stream<Struct5valuei32End>) -> Stream<Struct5valuei32End> {
    let output_0: Stream<Struct5valuei32End> = Stream::operator(input_0, Identity());
    output_0
}
#[arcorn::rewrite]
#[derive(Copy)]
pub struct Struct5valuei32End {
    value: i32,
}


